--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="style.css">
     <title>Sablon</title>
 </head>
 <body>
     
     <div class="container">
-        <h1>Sablon</h1>
-    </div>
+        <h1>Szám szöveggel konzolon</h1>
+        <div class="mt-3">
+            <input type="text" id="num1" class="form-control" placeholder="Írjon be egy számot">
+        </div>
+        <div class="mt-3">
+            <button id="getButton" class="btn btn-secondary" >
+                Szövegesen
+            </button>
+        </div>
 
+        <div>
+            <button class="btn btn-primary" id="startButton">
+                Indul
+            </button>
+        </div>
+        <div id="doboz1">a</div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
